[tool.poetry]
name = "project-calendar"
version = "0.1.0"
description = "Django app"
authors = ["Pavlos Loukareas <ploukareas@gmail.com>"]
readme = "README.md"
packages = [{include = "project_calendar"}]

[tool.poetry.dependencies]
python = "3.10.8"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
